language/move-prover/tests/sources/functional/mut_ref_unpack.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/mut_ref_unpack.move:39:10 ───
    │
 39 │          ensures sum == old(sum) - old(r.value);
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mut_ref_unpack.move:31:5: unpack_incorrect
    =         r = <redacted>,
    =         result = <redacted>,
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/mut_ref_unpack.move:33:23: unpack_incorrect
    =     at tests/sources/functional/mut_ref_unpack.move:36:10: unpack_incorrect
